walk sound file jump fix

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 #startGameButton {
     font-family: 'MexicanTequila';
     position: absolute;
-    bottom: 80px;
+    bottom: 65px;
     padding: 5px 10px;
     padding-top: 10px;
     font-size: 50px;
